--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_rating_bar: ^4.0.1
   salomon_bottom_bar: ^3.3.2
+  water_drop_nav_bar: ^2.2.0+5
 
 dev_dependencies:
   flutter_test:
