--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   salomon_bottom_bar: ^3.3.2
   water_drop_nav_bar: ^2.2.0+5
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
