--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,14 +36,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_rating_bar: ^4.0.1
-  salomon_bottom_bar: ^3.3.2
   water_drop_nav_bar: ^2.2.0+5
   get: ^4.6.5
+  flutter_native_splash: ^2.3.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_native_splash:
+  image: images/splash.png
+  color: "#263238"
+  android_12:
+    image: images/splash.png
+    color: "#263238"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
